--- a/now.json
+++ b/now.json
@@ -1,4 +1,7 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@now/node" }]
+  "builds": [{ "src": "index.js", "use": "@now/node" }],
+  "env": {
+    "DATABASE_KEY": "@database-key"
+  }
 }
